[package]
name = "bulletproof"
version = "1.1.6"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]

[lib]
name = "bulletproof"
crate-type = ["lib"]

[dependencies]
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
#curv = { package = "curv-kzen", version = "0.7", default-features = false }
curv = {path="../curv" ,version="*",default-features = false }
[dev-dependencies]
criterion = "0.2"

#[features]
#default = ["num-bigint"]

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
